data/all_generated_tests/raw_wast_tests/nop_IncorrectConditionEvaluation_476.wast
;; 7. **Sequence of `nop` and Control Transfers**:    Create a sequence of `nop` instructions followed by several control transfer instructions, including `br_if`. Validate each condition is correctly assessed, and confirm the sequence of nop does not affect branching decisions.

(assert_invalid
  (module
    (func $nop_br_if (block (nop) (nop) (br_if 0 (i32.const 1))))
  )
  "type mismatch"
)